Ensure letter spacing is always normal for terminal

--- a/src/styles/modules/_font.sass
+++ b/src/styles/modules/_font.sass
@@ -2,6 +2,8 @@
   font-family: Consolas, Menlo, 'Bitstream Vera Sans Mono', monospace
 
   .line
+    letter-spacing: normal
+
     span
       padding: 0
       display: inline-block
